--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,34 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: rgb(50, 50, 50);
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    background-color: rgb(30, 30, 50);
+}
+
+menu ul {
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+}
+
+menu li {
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    color: rgb(160, 160, 160);
+}
+
+menu li:hover {
+    color: rgb(200, 200, 200);
 }
