--- a/css/mao.css
+++ b/css/mao.css
@@ -15,7 +15,7 @@ body {
 .weapons-title {
     display: flex;
     column-gap: 1rem;
-    margin: 5rem auto 3rem auto;
+    margin: 3rem auto 3rem auto;
     width: min(90%, 75rem);
     font-size: 1rem;
 }
@@ -35,8 +35,8 @@ body {
     'five'
     'six';
     grid-auto-columns: 1fr;
-    gap: 2rem;
-    margin: 3rem auto;
+    gap: 1rem;
+    margin: 2rem auto 5rem auto;
     width: min(90%,75rem);
 }
 
@@ -103,8 +103,30 @@ body {
 }
 
 .weapons-area h2 {
-    padding-bottom: 1rem;
-    font-size: 20px;
+    padding: 2rem 0 1rem 0;
+    font-size: 16px;
+}
+
+.weapons-area a {
+    display: inline-block;
+    background-color: #1E2335;
+    border-radius: 50px;
+    border: solid 1px rgb(61, 90, 254);
+    color: #fff;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    width: 8rem;
+    text-decoration: none;
+}
+
+.weapons-area a:hover{
+    display: inline-block;
+    background-color: rgb(61, 90, 254);
+    border-radius: 50px;
+    color: #fff;
+    padding: 1rem ;
+    width: 8rem;
+    text-decoration: none;
 }
 
 /*  
