--- a/css/mao.css
+++ b/css/mao.css
@@ -200,6 +200,137 @@ menu a:not(:hover) {
     text-decoration: none;
 }
 
+/* -----------------------------------------KNIVES SECITON--------------------------------------------- */
+.knife-title {
+    display: flex;
+    column-gap: 1rem;
+    margin: 5rem auto 3rem auto;
+    width: min(90%, 75rem);
+    font-size: 1rem;
+}
+
+.knife-title img {
+    width: 2rem;
+}
+
+
+.knives-area {
+    display: grid;
+    grid-template-areas: 
+    'one'
+    'two'
+    'three'
+    'four'
+    'five'
+    'six';
+    grid-auto-columns: 1fr;
+    gap: 2rem;
+    margin: 3rem auto;
+    width: min(90%,75rem);
+}
+
+.knife-pov {
+    text-align: center;
+}
+
+.knife-map {
+    text-align: center;
+}
+
+.knife {
+    text-align: center;
+    background-color: rgb(28, 30, 34);
+    border: #000 solid 1px;
+    border-radius: 10px;
+    padding: 3rem;
+}
+
+
+.knife-pov:nth-child(1) {
+    grid-area: one;
+}
+
+.knife-map:nth-child(2) {
+    grid-area: two;
+}
+
+.knife:nth-child(3) {
+    grid-area: three;
+}
+
+.knife:nth-child(4) {
+    grid-area: four;
+}
+
+.knife:nth-child(5) {
+    grid-area: five;
+}
+
+.knife:nth-child(6) {
+    grid-area: six;
+}
+
+
+@media (min-width: 520px){
+    .knives-area {
+        grid-template-areas:
+        'one two'
+        'three four'
+        'five six';
+    }
+}
+
+@media (min-width: 960px){
+    .knives-area {
+        grid-template-areas: 
+        'one two three'
+        'four five six';
+    }
+}
+
+.knives-area img {
+    width: 60%;
+    aspect-ratio: 3/2;
+    object-fit: contain;
+    filter: drop-shadow(0 0 1rem #fff);
+}
+
+.knives-area img:hover {
+    filter: drop-shadow(0 0 0.75rem #0044ff);
+    transform: scale(1.15);
+    transition: transform 0.6s ease;
+}
+
+.knives-area h2 {
+    padding: 2rem 0 4rem 0;
+    font-size: 16px;
+}
+
+.knives-area a {
+    display: inline-block;
+    background-color: #1E2335;
+    border-radius: 50px;
+    border: solid 1px rgb(61, 90, 254);
+    color: #fff;
+    padding: 1rem;
+    margin-top: 2rem;
+    width: 8rem;
+    text-decoration: none;
+}
+
+.knives-area a:hover{
+    display: inline-block;
+    background-color: rgb(61, 90, 254);
+    border-radius: 50px;
+    color: #fff;
+    padding: 1rem ;
+    width: 8rem;
+    text-decoration: none;
+}
+
+
+
+
 /* -----------------------------------------FOOTER SECITON--------------------------------------------- */
 
 .footer-container {
