--- a/css/mao.css
+++ b/css/mao.css
@@ -13,21 +13,10 @@ body {
 /* -----------------------------------------NAV SECITON--------------------------------------------- */
 nav {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
     background-color: rgb(30, 30, 50);
 }
 
-menu ul {
-    display: flex;
-    justify-content: space-between;
-    width: 200px;
-}
-
 menu li {
-    display: inline-block;
-    align-items: center;
     cursor: pointer;
     font-weight: bold;
     color: hsl(0, 0%, 63%);
@@ -39,6 +28,14 @@ menu a:hover {
 
 menu a:not(:hover) {
     animation: unem 0.5s forwards;
+}
+
+#logo {
+    position: absolute;
+    left: 0;
+    height: 80px;
+    margin-right: 20px;
+    margin-left: 2rem;
 }
 
 .micon {
@@ -54,22 +51,6 @@ menu a:not(:hover) {
     animation: noci 0.5s forwards;
 }
 
-#logo {
-    position: absolute;
-    left: 0;
-    height: 80px;
-}
-
-@keyframes menu {
-    from {color: rgb(160, 160, 160);}
-    to {color: white;}
-}
-
-@keyframes unem {
-    from {color: white;}
-    to {color: #a0a0a0;}
-}
-
 @keyframes icon {
     from {filter: invert(68%) sepia(2%) saturate(170%) hue-rotate(54deg) brightness(95%) contrast(85%);}
     to {filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(102%) contrast(105%);}
@@ -78,6 +59,40 @@ menu a:not(:hover) {
 @keyframes noci {
     from {filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(102%) contrast(105%);}
     to {filter: invert(68%) sepia(2%) saturate(170%) hue-rotate(54deg) brightness(95%) contrast(85%);}
+}
+
+@keyframes mitem {
+    from {filter: drop-shadow();}
+    to {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25;}
+}
+
+@keyframes metim {
+    from {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25;}}
+    to {filter: drop-shadow();
+}
+
+@media only screen and (max-width: 768px) {
+    menu li {display: block;}
+    nav {justify-content: right; height: 110px; align-items: flex-end;}
+    main {grid-template-columns: auto;}
+    .cases {grid-template-columns: auto;}
+    .item9 {display: none;}
+}
+
+@media only screen and (min-width: 769px) {
+    menu li {display: inline-block;}
+    nav {justify-content:flex-end; height: 80px; align-items: center;}
+    main {grid-template-columns: auto auto auto;}
+    .cases {grid-template-columns: auto auto auto auto;}
+
+}
+
+@media only screen and (min-width: 993px) {
+    menu li {display: inline-block;}
+    nav {justify-content:flex-end; height: 80px; align-items: center;}
+    main {display: grid; grid-template-columns: auto auto auto auto;}
+    .cases {grid-template-columns: auto auto auto auto auto auto;}
+    .item9 {display: none;}
 }
 
 
@@ -113,6 +128,10 @@ menu a:not(:hover) {
 
 .weapon {
     text-align: center;
+    background-color: rgb(28, 30, 34);
+    border: #000 solid 1px;
+    border-radius: 10px;
+    padding: 2rem;
 }
 
 .weapon:nth-child(1) {
@@ -156,7 +175,6 @@ menu a:not(:hover) {
         'one one two three'
         'one one six six'
         'four five six six'
-
     }
 }
 
@@ -185,7 +203,6 @@ menu a:not(:hover) {
     border: solid 1px rgb(61, 90, 254);
     color: #fff;
     padding: 1rem;
-    margin-bottom: 2rem;
     width: 8rem;
     text-decoration: none;
 }
@@ -204,7 +221,7 @@ menu a:not(:hover) {
 .knife-title {
     display: flex;
     column-gap: 1rem;
-    margin: 5rem auto 3rem auto;
+    margin: 3rem auto 2rem auto;
     width: min(90%, 75rem);
     font-size: 1rem;
 }
@@ -302,7 +319,7 @@ menu a:not(:hover) {
 }
 
 .knives-area h2 {
-    padding: 2rem 0 4rem 0;
+    padding: 1rem 0 4rem 0;
     font-size: 16px;
 }
 
@@ -334,8 +351,7 @@ menu a:not(:hover) {
 /* -----------------------------------------FOOTER SECITON--------------------------------------------- */
 
 .footer-container {
-    background-color: rgb(40, 40, 40)
-}
+    background-color: rgb(30, 30, 50);}
 
 .footer-logo {
     text-align: center;
