--- a/css/gabriel.css
+++ b/css/gabriel.css
@@ -15,7 +15,7 @@ main {
     align-items: center;
     margin: auto;
     padding: 50px;
-    gap: 50px;
+    gap: 30px;
 }
 
 [class*="item"] {
@@ -36,6 +36,19 @@ main {
 
 .mainimg:not(:hover) {
     animation: metim 0.5s forwards;
+}
+
+.maingun {
+    width: 15em;
+    margin: auto;
+}
+
+.maingun:hover {
+    animation: mgun 0.5s forwards;
+}
+
+.maingun:not(:hover) {
+    animation: nugm 0.5s forwards;
 }
 
 .row::after {
@@ -63,21 +76,6 @@ main {
     padding: 20px;
     gap: 10px;
     max-width: 100%;
-}
-
-.c1 p {
-    color: rgba(160, 160, 160, 1);
-    font-size: xx-large;
-    margin-top: -50px;
-}
-
-.c1 p:hover {
-    animation: casename 0.5s forwards;
-}
-
-@keyframes casename {
-    from {color: rgba(160, 160, 160, 0);}
-    to {color: rgba(160, 160, 160, 1);}
 }
 
 .case {
@@ -211,8 +209,18 @@ menu a:not(:hover) {
 }
 
 @keyframes metim {
-    from {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25;}}
-    to {filter: drop-shadow();
+    from {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25;}
+    to {filter: drop-shadow();}
+}
+
+@keyframes mgun {
+    from {filter: drop-shadow();}
+    to {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25; transform: rotate(0.05turn);}
+}
+
+@keyframes nugm {
+    from {filter: drop-shadow(0 0 2rem #011ffd); scale: 1.25; transform: rotate(0.05turn);}
+    to {filter: drop-shadow();}
 }
 
 @media only screen and (max-width: 768px) {
