--- a/css/gabriel.css
+++ b/css/gabriel.css
@@ -6,6 +6,11 @@
     text-decoration: none;
 }
 
+html {
+    --grey: invert(68%) sepia(2%) saturate(170%) hue-rotate(54deg) brightness(95%) contrast(85%);
+    --white: invert(98%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(102%) contrast(105%);
+}
+
 body {
     background-color: #1e2335;
 }
@@ -13,6 +18,7 @@ body {
 main {
     display: grid;
     align-items: center;
+    width: fit-content;
     margin: auto;
     padding: 50px;
     gap: 30px;
@@ -26,7 +32,7 @@ main {
 }
 
 .mainimg {
-    width: 15em;
+    width: 100%;
     margin: auto;
 }
 
@@ -39,7 +45,7 @@ main {
 }
 
 .maingun {
-    width: 15em;
+    width: 100%;
     margin: auto;
 }
 
@@ -121,7 +127,6 @@ menu a:not(:hover) {
     position: absolute;
     left: 0;
     height: 80px;
-    margin-right: 20px;
     margin-left: 2rem;
 }
 
@@ -139,14 +144,16 @@ menu a:not(:hover) {
 }
 
 @keyframes icon {
-    from {filter: invert(68%) sepia(2%) saturate(170%) hue-rotate(54deg) brightness(95%) contrast(85%);}
-    to {filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(102%) contrast(105%);}
+    from {filter: var(--grey)}
+    to {filter: var(--white);}
 }
 
 @keyframes noci {
-    from {filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(10deg) brightness(102%) contrast(105%);}
-    to {filter: invert(68%) sepia(2%) saturate(170%) hue-rotate(54deg) brightness(95%) contrast(85%);}
+    from {filter: var(--white);}
+    to {filter: var(--grey);}
 }
+
+
 
 /*------------------------- footer -------------------------*/
 
@@ -224,17 +231,18 @@ menu a:not(:hover) {
 }
 
 @media only screen and (max-width: 768px) {
-    menu li {display: block;}
-    nav {justify-content: right; height: 110px; align-items: flex-end;}
+    menu li {display: none}
+    nav {justify-content: right; height: 80px; align-items: flex-end;}
     main {grid-template-columns: auto;}
     .cases {width: fit-content;}
     .item9 {display: none;}
+    body {max-width: 100vw;}
 }
 
 @media only screen and (min-width: 769px) {
     menu li {display: inline-block;}
     nav {justify-content:flex-end; height: 80px; align-items: center;}
-    main {grid-template-columns: auto auto auto;}
+    main { grid-template-columns: auto auto auto;}
     .cases {grid-template-columns: auto auto auto auto;}
     .c6 {
         grid-row-start: 2;
@@ -243,6 +251,8 @@ menu a:not(:hover) {
         grid-column-end: 4;
     }
     .c6 img {width: 25em;}
+    .h-menu {display: none;}
+    .sidebar {display: none;}
 }
 
 @media only screen and (min-width: 993px) {
@@ -273,5 +283,6 @@ menu a:not(:hover) {
     .c1 img {width: 25em;}
     .c6 img {width: 25em;}
     .c11 img {width: 25em;}
-
+    .h-menu {display: none;}
+    .sidebar {display: none;}
 }
